# fn-dg6-ingest

./: .gitignore  README.md  main.py  pyproject.toml
docs/: checkpoint.md
docs/vibe/: prd.md
fn_dg6_ingest/: __init__.py  _pipeline.py  config.py  dataset.py  detect.py  exceptions.py  export.py  layout_registry.py  layouts.py  meta.py  reader.py
fn_dg6_ingest/layouts/: __init__.py  misc_etf.yaml  timeseries_wide.yaml
fn_dg6_ingest/parsers/: __init__.py  base.py  long.py  misc.py  snapshot.py  timeseries.py  wide.py
fn_dg6_ingest/transforms/: __init__.py  empty.py  numbers.py  pipeline.py  splitter.py  units.py
scripts/: inspect_outputs.py  run_ingest.py
tests/: conftest.py
tests/integration/: test_config_roundtrip.py  test_dataset_e2e.py  test_export.py  test_long_etf.py  test_misc_etf.py  test_timeseries.py  test_wide_ohlcv.py
tests/unit/: test_config.py  test_dataset.py  test_detect.py  test_empty.py  test_export.py  test_meta.py  test_numbers.py  test_pipeline.py  test_reader.py  test_splitter.py  test_units.py
